Tue Oct 08 17:28:57 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.[ch], src/eval.[ch], src/genius.c, src/gnome-genius.c:
	  Improve the PlotCanvasFreeze/Thaw functions, and make sure plot
	  canvas is always thawed after end of execution so that it never
	  simply remains frozen.
	
	* help/C/genius.xml: Document the two functions

Tue Oct 08 16:54:53 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Very simple PlotCanvasFreeze/Thaw functions, need
	  improvement and documentation

Tue Oct 08 16:57:08 2013  Jiri (George) Lebl <jirka@5z.com>

	* configure.in, pixmaps/Makefile.am: Use gtk-update-icon-cache,
	  otherwise it seems icons are sometimes not picked up.

Thu Oct 03 17:15:40 2013  Jiri (George) Lebl <jirka@5z.com>

	* lib/linear_algebra/linear_algebra.gel: Implement
	  KroneckerProduct (alias TensorProduct)

	* help/C/genius.xml: Document KroneckerProduct and add a few
	  wikipedia links and some minor improvements.

	* src/geniustests.txt: add tests

Wed Oct 02 17:36:54 2013  Jiri (George) Lebl <jirka@5z.com>

	* configure.in: bump version 

Wed Oct 02 17:35:09 2013  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/*: remove bunch of unused stuff to fix warnings.

	* src/graphing.c: Allow setting color in LinePlotDrawLine as a
	  3-vector of RGB values in the range of 0 to 1.

	* help/C/genius.xml: Document changes to LinePlotDrawLine and
	  rewrite part of that entry.

	* src/graphing.c: Allow zooming by selecting when we just do
	  LinePlotDrawLine and not a LinePlot first.

Tue Oct 01 21:35:09 2013  Jiri (George) Lebl <jirka@5z.com>

	* autogen.sh, configure.in: updates, for example we still refer
	  to cvs

Tue Oct 01 18:16:21 2013  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/*.c: fix some more warnings including a leak

Tue Oct 01 18:02:13 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/eval.c, src/mpwrap.[ch]: fix subtle copy on write error with
	  nested for loops with a floating point "by"
	