@@ -1135,6 +1135,12 @@ KroneckerProduct([11,22;33,44],[1,2;3,4])			[11,22,22,44;33,44,66,88;33,66,44,88
 KroneckerProduct([-1,2],[1,2;3,4])				[-1,-2,2,4;-3,-4,6,8]
 KroneckerProduct(null,[1,2;3,4])+0				((null)+0)
 KroneckerProduct([0],null)+0					((null)+0)
+|NewtonsMethod (`(x)=x^2-10,`(x)=2*x,1.0,0.0001,100)-sqrt(10)|<0.0001	true
+|NewtonsMethod (`(x)=x^2-2,`(x)=2*x,1.0,0.00001,100)-sqrt(2)|<0.00001	true
+|NewtonsMethod (`(x)=x*e^x-0.5,`(x)=x*e^x+e^x,1.0,0.0001,100) - LambertW(0.5)|<0.0001	true
+|NewtonsMethod (`(x)=x*e^x+0.1,`(x)=x*e^x+e^x,1.0,0.0001,100) - LambertW(-0.1)|<0.0001	true
+|NewtonsMethod (`(x)=x*e^x-10,`(x)=x*e^x+e^x,1.0,0.0001,100) - LambertW(10)|<0.0001	true
+|NewtonsMethod (`(x)=x*e^x+0.1,`(x)=x*e^x+e^x,-2.0,0.0001,100) - LambertWm1(-0.1)|<0.0001	true
 load "nullspacetest.gel"					true
 load "longtest.gel"						true
 load "testprec.gel"						true
