@@ -1,3 +1,10 @@
+Tue Oct 15 18:17:58 2013  Jiri (George) Lebl <jirka@5z.com>
+
+	* lib/functions/lambert.gel, lib/equation_solving/newton.gel: Add
+	  LambertW, LambertWm1, NewtonsMethod
+	
+	* src/geniustests.txt: add tests for the above
+
 Tue Oct 08 17:28:57 2013  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.[ch], src/eval.[ch], src/genius.c, src/gnome-genius.c:
